<resources>
    <string name="app_name">Demo_SDK_AS</string>
    <string name="print_test">打印测试</string>
    <string name="printer_version">打印机版本：</string>
    <string name="bar_code">条形码:</string>
    <string name="print_bar_code">条码打印</string>
    <string name="D_bar_code">二维码:</string>
    <string name="print_2D_barcode">二维码打印</string>
    <string name="walk_paper_lines">走纸行数:</string>
    <string name="walk_paper_test">走纸测试</string>
    <string name="left_margin">左边距:</string>
    <string name="right_margin">右边距</string>
    <string name="row_space">行距:</string>
    <string name="font_size">字体大小:</string>
    <string name="gray_level">灰度:</string>
    <string name="print_content">打印内容：</string>
    <string name="chinese_example">显示中文范例</string>
    <string name="english_example">显示英文范例</string>
    <string name="persian_example">显示阿拉伯文范例</string>
    <string name="french_example">显示法文范例</string>
    <string name="japanese_example">显示日文范例</string>
    <string name="korean_example">显示韩文范例</string>
    <string name="russian_example">显示俄文范例</string>
    <string name="thailand_example">显示泰文范例</string>
    <string name="cambodia_example">显示高棉语范例</string>
    <string name="laos_example">显示老挝语范例</string>
    <string name="print_count">打印次数:</string>
    <string name="clear_text">清空文本</string>
    <string name="print_text">文字打印</string>
    <string name="print_georgia_text">打印格鲁吉亚语</string>
    <string name="print_foreign_text">打印特殊语言</string>
    <string name="printing_wait">打印中，请稍候……</string>
    <string name="D_barcode_loading">二维码加载</string>
    <string name="generate_barcode_wait">二维码生成中，请稍候……</string>
    <string name="input_print_data">请输入打印数据</string>
    <string name="print_paper_width">打印纸宽度:</string>
    <string name="printer_paper_80mm">80mm</string>
    <string name="printer_paper_58mm">58mm</string>
    <string name="maker_search_distance">寻找到黑标前的最大走纸长度:</string>
    <string name="maker_walk_distance">寻找到黑标后的走纸长度:</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">黑标检测</string>
    <string name="maker_error">黑标输入值不合法</string>
    <string name="maker_not_find">找不到黑标</string>
    <string name="papercut">切纸</string>
    <string name="inverse">反色</string>
    <string name="not_inverse">取消反色</string>
    <string name="walk_paper_intput_value">走纸输入值不合法</string>
    <string name="print_picture">图片打印</string>
    <string name="print_long_picture">长图片打印</string>
    <string name="print_long_text">长文本打印</string>
    <string name="print_black">打印黑色图片</string>
    <string name="print_interval">连续打印时间间隔</string>
    <string name="print_cricle_start">开始连续打印</string>
    <string name="print_cricle_stop">停止连续打印</string>
    <string name="print_cricle_hint">秒/次</string>
    <string name="sure">确定</string>
    <string name="not_find_picture">找不到图片</string>
    <string name="input_command">请输入指令</string>
    <string name="execute_command">执行指令</string>
    <string name="watting">正在检测驱动版本，请稍候...</string>
    <string name="openDoor">打印机盖打开！</string>
    <string name="noPaper">打印缺纸</string>
    <string name="noPaperNotice">打印缺纸，请放入纸后重试</string>
    <string name="LowBattery">电池电量低，请连接充电器！</string>
    <string name="overTemp">打印过热！</string>
    <string name="ptintInit">打印机初始化中，请稍后再试</string>
    <string name="outOfLeft">超出左边距范围！</string>
    <string name="outOfLine">超出行距范围！</string>
    <string name="outOfFont">超出字体范围！</string>
    <string name="outOfGray">超出浓度范围！</string>
    <string name="outOfCharSpace">超出字符间距范围！</string>
    <string name="empty">内容为空！</string>
    <string name="lengthNotEnougth">长度不足！</string>
    <string name="index_text">打印文本</string>
    <string name="index_pic">条码/图片</string>
    <string name="index_comm">打印指令</string>
    <string name="input_content">输入打印内容</string>
    <string name="dialog_comfirm">确定</string>
    <string name="operation_result">结果</string>
    <string name="bl_dy">打印</string>
    <string name="print_waring">提示：如果SDK提供的函数中不能满足您的打印需求，您可以通过发送打印指令的方式进行实现</string>
    <string name="printer_type_80mm">80mm打印机</string>
    <string name="printer_type_58mm">58mm打印机</string>
    <string name="printer_type_select">选择打印机类型</string>
    <string name="string_offset_range">(0-255)且为8的倍数</string>
    <string name="short_text_content">短文本内容</string>
    <string name="hint_short_text">内容不得超过一行</string>
    <string name="print_short_text">打印短文本</string>
    <string name="param_error">非法参数</string>
    <string name="auto_linefeed">自动换行</string>
    <string name="text_bold">字体加粗</string>
    <string name="text_too_long">文本过长</string>
    <string name="text_format_error">文本格式错误</string>
    <string name="interval_format_error">文本格式错误</string>
    <string name="not_support">不支持自动换行功能</string>
    <string name="checkPrinterType">检测打印机类型</string>
    <string name="check_error">检测失败,请检查是否缺纸及机盖是否关闭</string>
    <string name="printContent1">\n             烧烤\n----------------------------\n日期：2015-01-01 16:18:20\n卡号：12378945664\n单号：1001000000000529142\n----------------------------\n  项目    数量   单价  小计\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n 合计：1000：00元\n----------------------------\n本卡金额：10000.00\n累计消费：1000.00\n本卡结余：9000.00\n----------------------------\n 地址：广东省佛山市南海区桂城街道桂澜南路45号鹏瑞利广场A317.B-18号铺\n欢迎您的再次光临\n</string>
    <string name="foreignLanguage">აშო, ჩელა, ვიშო ბუსქა,ოუ, ნანა, ოუ ნანა, ნანინა.სი მონობაშ, გეგაფილი,ოუ, ნანა, სკალი ცოდვა, ნანინა.\nმისამღერი:.ოუ, ნანა, ოუ ნანა, ნანინა…სი უჩხონჩხე, სი უგურე,ოუ, ნანა, სკალი ცოდვა, ნანინა.სი კისერი ელაფირი.ოუ, ნანა, სკალი ცოდვა, ნანინა.მისამღერი..</string>
    <string name="tem_cannt_null">温度保护值不能为空</string>
    <string name="tem_set_wrong">温度保护值设定错误</string>
    <string name="tem_set_success">设定成功</string>
    <string name="str581">\n             烧烤\n----------------------------\n日期：2015-01-01 16:18:20\n卡号：12378945664\n单号：1001000000000529142\n----------------------------\n  项目          数量    单价    小计\n秘制烤羊腿     1       56       56\n黯然牛排        2       24       48\n烤火鸡           2       50       100\n炭烧鳗鱼        1       40       40\n烤全羊           1       200     200\n荔枝树烧鸡     1       50       50\n冰镇乳鸽        2       23       46\n秘制烤羊腿     1       56       56\n黯然牛排        2       24       48\n烤火鸡           2       50       100\n炭烧鳗鱼        1       40       40\n烤全羊           1       200     200\n荔枝树烧鸡     1       50       50\n冰镇乳鸽        2       23       46\n秘制烤羊腿     1       56       56\n黯然牛排        2       24       48\n烤火鸡           2       50       100\n炭烧鳗鱼        1       40       40\n烤全羊           1       200     200\n荔枝树烧鸡     1       50       50\n冰镇乳鸽        2       23       46\n秘制烤羊腿     1       56       56\n黯然牛排        2       24       48\n烤火鸡           2       50       100\n炭烧鳗鱼        1       40       40\n烤全羊           1       200     200\n荔枝树烧鸡     1       50       50\n冰镇乳鸽        2       23       46\n秘制烤羊腿     1       56       56\n黯然牛排        2       24       48\n烤火鸡           2       50       100\n炭烧鳗鱼        1       40       40\n烤全羊           1       200     200\n荔枝树烧鸡     1       50       50\n冰镇乳鸽        2       23       46\n 合计：1000：00元\n----------------------------\n本卡金额：10000.00\n累计消费：1000.00\n本卡结余：9000.00\n----------------------------\n 地址：广东省佛山市南海区桂城街道桂澜南路45号鹏瑞利广场A317.B-18号铺\n欢迎您的再次光临\n</string>
    <string name="print_check_info">打印自检信息</string>
    <string name="hal_version">硬件版本:</string>
    <string name="soft_version">软件版本:</string>
    <string name="print_addtext_count">文本次数（长度）:</string>
    <string name="qrcode_verify">二维码识别</string>
    <string name="qrcode_dialog_title">选择解码类型</string>
    <string name="qrcode_dialog_msg">请选择读头解码类型</string>
    <string name="qrcode_dialog_soft_decoding">软解码</string>
    <string name="qrcode_dialog_hard_decoding">软解码</string>
    <string name="qrcode_scan_success">扫描成功</string>
    <string name="magnetic_card_test">磁条卡测试</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">刷卡</string>
    <string name="quit">退出</string>
    <string name="error_open_magnetic_card">无法打开磁条卡设备</string>
    <string name="error">出错</string>
    <string name="rfid_test">RFID测试</string>
    <string name="operation_fail">操作失败</string>
    <string name="init_card">开　　卡</string>
    <string name="query">查询余额</string>
    <string name="consume">消　　费</string>
    <string name="recharge">充 　　值</string>
    <string name="opening">正在连接读卡器</string>
    <string name="operating">操作中</string>
    <string name="operation_succss">操作成功</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_init_amount">"请输入初始化金额"</string>
    <string name="input_consume_amount">请输入消费金额</string>
    <string name="input_recharge_amount">"请输入充值金额"</string>
    <string name="balance">当前余额</string>
    <string name="no_enough_balance">余额不足</string>
    <string name="input_amount">请输入金额</string>
    <string name="cpu_card_test">CPU卡测试</string>
    <string name="check_version">正在获取打印机驱动版本号,请稍候</string>
    <string name="get_rfid_sn">获取卡信息</string>
    <string name="m1_card_test">M1卡测试</string>
    <string name="ul_card_test">Ultralight卡测试</string>
    <string name="card_sn">卡号:</string>
    <string name="ul_read_card">读卡</string>
    <string name="ul_write_card">写卡</string>
    <string name="read_succss">读卡成功</string>
    <string name="write_succss">写卡成功</string>
    <string name="cpucard_send_apdu_command">发送apdu指令</string>
    <string name="identity_test">身份证识别</string>
    <string name="bl_xsdxx"> 请放置身份证...</string>
    <string name="idcard_czz">操作中</string>
    <string name="idcard_ljdkq">连接读卡器...</string>
    <string name="idcard_ljdkqcg">连接读卡器成功</string>
    <string name="idcard_wfljdkq">无法连接读卡器</string>
    <string name="idcard_dqsbhcs">读取失败或超时</string>
    <string name="idcard_xm">姓名：</string>
    <string name="idcard_xb">性别：</string>
    <string name="idcard_mz">民族：</string>
    <string name="idcard_csrq">出生日期：</string>
    <string name="idcard_dz">地址：</string>
    <string name="pcsc_test">IC卡测试</string>
    <string name="psam_test">PSAM测试</string>
    <string name="moneybox_test">钱箱测试</string>
    <string name="ir_test">红外测试</string>
    <string name="led">LED测试</string>
    <string name="decode">激光二维码测试</string>
    <string name="nfc">NFC测试</string>
    <string name="hardreader">硬读头测试</string>
    <string name="tamper_test">防拆测试</string>
    <string name="Digital_test">数码管测试</string>
    <string name="system_api_test">系统接口测试</string>
    <string name="pos_setting_api_test">输入/输出接口测试</string>
    <string name="pos_led_col">LED控制</string>
    <string name="pos_led_type">类型</string>
    <string name="pos_led_color">颜色</string>
    <string name="can_api_test">Can总线测试</string>
    <string name="can_frame_format">帧格式: </string>
    <string name="can_frame_type">帧类型: </string>
    <string name="can_id">ID: </string>
    <string name="can_data">数据: </string>
    <string name="can_send">发送</string>
    <string name="can_get_one_frame_data">获取一帧数据</string>
    <string name="can_set_mode">设置模式</string>
    <string name="can_set_mode_loopback">回环自发自收</string>
    <string name="can_set_filter">设置过滤器</string>
</resources>