<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/print_test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/print_test"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/print_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/qrcode_verify"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/qrcode_verify" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/magnetic_card_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/magnetic_card_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/moneybox_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/moneybox_test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/identity_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/identity_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/pcsc_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/pcsc_test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nfc_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/nfc" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/psam"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/psam_test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/decode_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:enabled="false"
                    android:text="@string/decode" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/rfid_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:enabled="false"
                    android:text="@string/rfid_test" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/ir_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:enabled="false"
                    android:text="@string/ir_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/led_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:enabled="false"
                    android:text="@string/led" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tamper_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/tamper_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/other_api_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/pos_setting_api_test" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/digitaltube_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/Digital_test" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>

                <Button
                    android:id="@+id/system_api_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/system_api_test" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/can_test_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="99dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/can_api_test" />

                <View
                    android:layout_width="115dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/hardreader_btn"
                    style="@style/buttonNumberStyle"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number_violet_shape"
                    android:text="@string/hardreader" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="fill_parent"></View>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>