<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telpo.tps550.api.demo.can.Can2DeptActivity">

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TableLayout
                android:id="@+id/table_can_bitrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:layout_marginTop="5dp">

                    <CheckBox
                        android:id="@+id/cb_can_mode_self"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/can_set_mode_loopback" />

                    <Button
                        android:id="@+id/btn_can_set_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_number_violet_shape"
                        android:text="@string/can_set_mode" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btn_can_set_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/table_can_bitrate"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/can_set_filter" />

            <TableLayout
                android:id="@+id/table_can_send_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_can_set_filter"
                android:orientation="vertical">

                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:minWidth="80dp"
                        android:text="@string/can_frame_format"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/sp_can_frame_format"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/can_frame_type"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/sp_can_frame_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/can_id"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edt_can_send_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="1234567890"
                        android:hint="hex"
                        android:text="123" />
                </TableRow>

                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/can_data"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edt_can_send_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="hex"
                        android:text="12345678" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btn_can_send_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/table_can_send_set"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/can_send" />

            <Button
                android:id="@+id/btn_can_receive_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_can_send_data"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/can_get_one_frame_data" />

            <TextView
                android:id="@+id/tv_can_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_can_receive_data"
                android:textSize="18sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>