<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telpo.tps550.api.demo.pos.LedActivity" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <TableLayout
        android:id="@+id/led_tablelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titlebar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pos_led_col"
            android:textColor="@color/Blue" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/Blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pos_led_type" />

            <Spinner
                android:id="@+id/spinner_led_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pos_led_color" />

            <Spinner
                android:id="@+id/spinner_led"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <TableRow android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/seekbar_led"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="255" />

            <TextView
                android:id="@+id/seekbar_led_num"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:translationY="90px">

            <Button
                android:id="@+id/nastavsvetlo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nastav svetlo" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
